--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: postgres:latest
     container_name: postgres-nest
     ports:
-      - '5433:5432'
+      - '5432:5432'
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: nestdb
+      POSTGRES_DB: task-managment
     volumes:
       - postgres_data:/var/lib/postgresql
 
